# proto_ros2

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  package.xml
config/: realsense_d435i.yaml
docker/: Dockerfile  entry.sh
gazebo/: CMakeLists.txt
gazebo/configs/: gui.config  sim_sandbox.config
gazebo/models/aprilgrid/: aprilgrid.blend  aprilgrid.dae  aprilgrid.mtl  cube.dae  make_texture.py  model.config  model.sdf
gazebo/models/gimbal/: model.config  model.sdf
gazebo/models/mav/: mav.blend  mav.scad  model.config  model.mtl  model.sdf
gazebo/models/skokloster_castle/: model.config  model.sdf
gazebo/models/visensor/: model.config  model.sdf
gazebo/models/x500/: model.sdf
gazebo/plugins/: GazeboPluginUtils.hh  GimbalControllerPlugin.cc  GimbalPlugin.cc  HelloWorldPlugin.cc  MavPlugin.cc  MavPositionControllerPlugin.cc  ModelPlugin.cc
gazebo/scripts/: run.sh
gazebo/worlds/: calibration.sdf  sandbox.sdf  sim_calib.sdf  sim_castle.sdf  sim_sandbox.sdf
launch/: calib_sim.launch.py  gimbal_experiments.launch.py  perception_module.launch.py  proto_ros2.launch.py  sim_calib.launch.py  sim_castle.launch.py  sim_mav.launch.py  sim_sandbox.launch.py  vicon_experiments.launch.py  vicon_experiments.py
rviz/: okvis.rviz
scripts/: bag2euroc.py  calib_gimbal.py  experiment.py  inspect_data.py  install_docker.bash  install_librealsense.bash  install_px4.bash  install_ros2.bash  okvis_calib_converter.py  plot_imu_data.py  plot_poses.py  reboot_px4.py  run.sh
src/: aprilgrid.h  calib_camera_record.cpp  calib_camimu_record.cpp  calib_gimbal.cpp  calib_gimbal_inspect.cpp  calib_gimbal_inspect2.cpp  calib_gimbal_record.cpp  calib_gimbal_record2.cpp  calib_multi_rs_record.cpp  gz_gimbal.cpp  gz_utils.hpp  mav_node.cpp  mav_node.py  mocap_filter_node.py  oak_imu_node.py  oak_stereo_imu_node.py  oak_stereo_imu_record.py  offboard.cpp  okvis_node.cpp  realsense.hpp  rs_multicam_node.cpp  rs_node.cpp  sandbox.py  sbgc_node.cpp  util.hpp
