CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1 FATAL_ERROR)
PROJECT(proto_gazebo)

# Dependencies
FIND_PACKAGE(gz-plugin2 QUIET REQUIRED COMPONENTS all)
FIND_PACKAGE(gz-common5 QUIET REQUIRED)
FIND_PACKAGE(gz-math7 QUIET REQUIRED)
FIND_PACKAGE(gz-sim7 QUIET REQUIRED)
SET(GZ_PLUGIN_VER ${gz-plugin2_VERSION_MAJOR})
SET(GZ_COMMON_VER ${gz-common5_VERSION_MAJOR})
SET(GZ_MATH_VER ${gz-math7_VERSION_MAJOR})
SET(GZ_SIM_VER ${gz-sim7_VERSION_MAJOR})

# Build Plugins
SET(DEPS
    PRIVATE gz-plugin${GZ_PLUGIN_VER}::gz-plugin${GZ_PLUGIN_VER}
    PRIVATE gz-sim7::gz-sim7)

ADD_LIBRARY(HelloWorldPlugin SHARED plugins/HelloWorldPlugin.cc)
TARGET_LINK_LIBRARIES(HelloWorldPlugin ${DEPS})

ADD_LIBRARY(GimbalPlugin SHARED plugins/GimbalPlugin.cc)
TARGET_LINK_LIBRARIES(GimbalPlugin ${DEPS})
